# gmail_fetcher

./: Cargo.toml  Dockerfile  README.md  last_processed_email_id.txt
src/: auth.rs  constants.rs  gmail.rs  main.rs
